[gd_scene load_steps=3 format=3 uid="uid://rgc5eaboq7ya"]

[ext_resource type="Script" uid="uid://b8hv368bkb8nu" path="res://scripts/menu.gd" id="1_brqes"]
[ext_resource type="Texture2D" uid="uid://yqhh2n7kx0ud" path="res://assets/logo.png" id="2_upctu"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_brqes")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 849.0
offset_top = 600.0
offset_right = 1078.0
offset_bottom = 694.0
text = "Launch Wirecraft"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 848.0
offset_top = 797.0
offset_right = 1077.0
offset_bottom = 891.0
text = "Settings"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 849.0
offset_top = 900.0
offset_right = 1078.0
offset_bottom = 994.0
text = "Exit Game"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 849.0
offset_top = 700.0
offset_right = 1078.0
offset_bottom = 794.0
placeholder_text = "Enter Level (0,1,2)"
alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 759.102
offset_top = 119.949
offset_right = 1167.1
offset_bottom = 527.949
texture = ExtResource("2_upctu")
expand_mode = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
